actions/kuberes/action-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath -o kuberes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: action-server
  name: action-server
spec:
  ports:
  - name: "5055"
    port: 5055
    targetPort: 5055
  selector:
    io.kompose.service: action-server
status:
  loadBalancer: {}
